working on styling

--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -19,7 +19,7 @@
     <ion-header-bar class="bar-dark">
       <h1 class="title" >Free Swap</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content id="side-menu">
       <ion-list>
         <ion-item nav-clear menu-close ui-sref="app.swap">
           Swap<i class="fa fa-gift" style="float:right;"></i>
@@ -41,9 +41,9 @@
           Settings<i class="fa fa-cogs" style="float:right;"></i>
         </ion-item>
 
-        <ion-item nav-clear menu-close ui-sref="front-page">
+<!--         <ion-item nav-clear menu-close ui-sref="front-page">
           Login
-        </ion-item>
+        </ion-item> -->
 
 <!--         <ion-item nav-clear menu-close ui-sref="app.chat">
           Chat
