--- a/www/js/front-page/front-page.html
+++ b/www/js/front-page/front-page.html
@@ -9,11 +9,11 @@
       <div id="login" class="list list-inset">
 
         <label class="item item-input">
-          <span class="input-label">Username</span>
+          <span class="input-label">Username:</span>
           <input type="text" ng-model="user.username">
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
+          <span class="input-label">Password:</span>
           <input type="password" ng-model="user.password">
         </label>
         <button class="button button-block button-calm" ng-click="login(user)">Log in</button>
@@ -21,6 +21,6 @@
         <!-- <button ng-click="loginFacebook()">Facebook Login</button> -->
       </div>
 
-    <button class="button button-block button-calm" ng-click="goTo('sign-up')">Sign Up</button>
+    <button class="button pull-right button-energized" ng-click="goTo('sign-up')">Not registered? Click here to sign up <i class="fa fa-arrow-right"></i></button>
   </ion-content>
 </ion-view>
