--- a/www/js/matches/matches.html
+++ b/www/js/matches/matches.html
@@ -56,4 +56,10 @@
       </ion-list>
     </div>
   </ion-content>
+  <div class="bar bar-footer bar-dark">
+    <div class="row">
+      <div class="col .col-50"><div class="title" style="float:left">Freeswap</div></div>
+      <div class="col .col-50"><div class="title" style="float:right">Craigslist</div></div>
+    </div>
+  </div>
 </ion-view>
