--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -1,14 +1,14 @@
 <ion-view view-title="Matches">
   <ion-header-bar class="bar-default">
     <h1 class="title">Matches as a seller</h1>
-    <style>
+<!--     <style>
     .red {
       color: #ff7f7f;
     }
     .green {
       color: #76e176;
     }
-    </style>
+    </style> -->
   </ion-header-bar>
   <ion-content>
     <div class="bar bar-header" >
