--- a/www/js/front-page/front-page.html
+++ b/www/js/front-page/front-page.html
@@ -27,7 +27,8 @@
 
         <!-- <button ng-click="loginFacebook()">Facebook Login</button> -->
       </div>
-
-    <button class="button pull-right button-energized" ng-click="goTo('sign-up')">Not registered? Click here to sign up <i class="fa fa-arrow-right"></i></button>
+      <div class="register">
+        <button class="button button-energized" ng-click="goTo('sign-up')">Not registered? Click here to sign up <i class="fa fa-arrow-right"></i></button>
+      </div>
   </ion-content>
 </ion-view>
