--- a/www/js/matches/matches.html
+++ b/www/js/matches/matches.html
@@ -1,14 +1,14 @@
 <ion-view view-title="Matches" >
       <ion-header-bar class="bar-default">
         <h1 class="title">Matches as a buyer</h1>
-        <style>
+<!--         <style>
           .red {
             background-color: #ff7f7f;
           }
           .green {
             background-color: #76e176;
           }
-        </style>
+        </style> -->
       </ion-header-bar>
   <ion-content>
     <div class="list">
@@ -22,44 +22,46 @@
       </div>
       <br>
       <br>
-      <h2>Free Swap</h2>
-      <ion-item ng-repeat="appItem in appMatches" class="item-thumbnail-left" ng-class="{
-          red: appItem.product.swappedWith !== 'null', green: appItem.product.swappedWith === userInfo._id
-        }" >
-        <img src="{{appItem.product.photoUrls}}">
-        <h2>{{appItem.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(appItem)" style="font-size:40px; float: right">  Chat</i>
-        <!-- <p>{{appItem.product.location}}</p> -->
-        <p> From: {{appItem.seller.username}}</p>
-        <button class="More" ng-model="appItem.product._id" ng-click="detail(appItem.product._id)">More Info</button>
-        <!--           <ion-item ng-repeat="appItem in matches" class="item-thumbnail-left" ng-class="{
+      <div ng-hide="showswap">
+        <!-- <h2>Free Swap</h2> -->
+        <ion-item ng-repeat="appItem in appMatches" class="item-thumbnail-left" ng-class="{
             red: appItem.product.swappedWith !== 'null', green: appItem.product.swappedWith === userInfo._id
-          }" ng-click="goToChat(appItem)">
-            <img src="{{appItem.product.photoUrls}}">
-            <h2>{{appItem.product.title}}</h2>
-            <p>{{appItem.product.location}}</p>
-            <p> From: {{appItem.seller.username}}</p>
+          }" >
+          <img src="{{appItem.product.photoUrls}}">
+          <h2>{{appItem.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(appItem)" style="font-size:40px; float: right">  Chat</i>
+          <!-- <p>{{appItem.product.location}}</p> -->
+          <p> From: {{appItem.seller.username}}</p>
+          <button class="More" ng-model="appItem.product._id" ng-click="detail(appItem.product._id)">More Info</button>
+          <!--           <ion-item ng-repeat="appItem in matches" class="item-thumbnail-left" ng-class="{
+              red: appItem.product.swappedWith !== 'null', green: appItem.product.swappedWith === userInfo._id
+            }" ng-click="goToChat(appItem)">
+              <img src="{{appItem.product.photoUrls}}">
+              <h2>{{appItem.product.title}}</h2>
+              <p>{{appItem.product.location}}</p>
+              <p> From: {{appItem.seller.username}}</p>
 
-            <button class="More" ng-model="appItem.product._id" ng-click="detail(appItem.product._id)">More Info</button> -->
-      </ion-item>
-      <h2>Craigslist</h2>
-      <ion-list>
-        <ion-item ng-repeat="cgItem in craigslistMatches" class="item-thumbnail-left" ng-class="{
-          red: cgItem.product.swappedWith !== 'null', green: cgItem.product.swappedWith === userInfo._id
-        }">
-          <img src="{{cgItem.product.photoUrls}}">
-          <h2>{{cgItem.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(appItem)" style="font-size:40px; float: right">  Chat</i>
-          <!-- <p>{{cgItem.product.location}}</p> -->
-          <p style="cursor: pointer" ng-click="goToUrl(cgItem.productUrl)">Ext. Link: {{cgItem.productUrl}}</p>
-          <button class="More" ng-model="cgItem.product._id" ng-click="detail(cgItem.product._id)">More Info</button>
-          <ion-reorder-button class="ion-navicon"></ion-reorder-button>
+              <button class="More" ng-model="appItem.product._id" ng-click="detail(appItem.product._id)">More Info</button> -->
         </ion-item>
-      </ion-list>
+      </div>
+      <div ng-show="showswap">
+        <!-- <h2>Craigslist</h2> -->
+        <ion-list>
+          <ion-item ng-repeat="cgItem in craigslistMatches" class="item-thumbnail-left" ng-class="{
+            red: cgItem.product.swappedWith !== 'null', green: cgItem.product.swappedWith === userInfo._id
+          }">
+            <img src="{{cgItem.product.photoUrls}}">
+            <h2>{{cgItem.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(appItem)" style="font-size:40px; float: right">  Chat</i>
+            <!-- <p>{{cgItem.product.location}}</p> -->
+            <p style="cursor: pointer" ng-click="goToUrl(cgItem.productUrl)">Ext. Link: {{cgItem.productUrl}}</p>
+            <button class="More" ng-model="cgItem.product._id" ng-click="detail(cgItem.product._id)">More Info</button>
+            <ion-reorder-button class="ion-navicon"></ion-reorder-button>
+          </ion-item>
+        </ion-list>
+      </div>
     </div>
   </ion-content>
-  <div class="bar bar-footer bar-dark">
-    <div class="row">
-      <div class="col .col-50"><div class="title" style="float:left">Freeswap</div></div>
-      <div class="col .col-50"><div class="title" style="float:right">Craigslist</div></div>
+    <div class="bar bar-footer bar-dark">
+      <button class="button button-clear" ng-click="showswap=false">FreeSwap Items</button>
+      <button class="button button-clear" ng-click="showswap=true">Craigslist Items</button>
     </div>
-  </div>
 </ion-view>
