--- a/www/js/history/history.html
+++ b/www/js/history/history.html
@@ -6,13 +6,14 @@
   <br>
   <br>
   <ion-content>
-<!--     <h2>Free Giveaways</h2>
+    <h2 style="color: #E38C00">Stuff You're Giving Away</h2>
       <ion-item ng-repeat="item in sellerHistory" class="item-thumbnail-left">
         <img ng-src="{{item.photoUrls}}">
         <h2>{{item.title}}</h2>
         <p>{{item.description}}</p>
-      </ion-item> -->
+      </ion-item>
 <div class="list">
+  <h2 style="color: #E38C00">Stuff You Liked</h2>
   <ion-item ng-repeat="item in buyerHistory" class="item-thumbnail-left">
     <img ng-src="{{item.photoUrls}}">
     <h2>{{item.title}}</h2>
