--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -31,7 +31,7 @@
         <h2>{{item.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(item)" style="font-size:40px; float: right">  Chat</i>
 
         <!-- <p>{{item.product.location}}</p> -->
-        <p> Liked By {{item.seller.username}}</p>
+        <p> Liked By {{item.buyer.username}}</p>
 <!--         <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
         <button class="delete" ng-model="item.buyer._id" ng-click="delete(item.product._id, item.buyer._id)">Delete</button>
         <button class="traded" ng-click="traded(item.product._id, item.buyer._id)">Traded</button>
