--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -45,7 +45,10 @@
       <span class="card-counter"> Cards Left </span>
       <span class="card-counter-number"> {{ cards.length }} </span>
     </div>
+
+
   </div>
+<div id="location"><i class="fa fa-map-marker"></i>Get Location</div>
   </ion-pane>
 
   <!-- <ion-spinner icon="ripple" ng-show="cards.length == 0"></ion-spinner> -->
