styling for chat

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <!-- Factories -->
     <script src="js/common/factories/chatFactory.js"></script>
     <script src="js/common/factories/swipeFactory.js"></script>
+    <script src="js/common/factories/locationFactory.js"></script>
     <script src="js/common/factories/userFactory.js"></script>
     <script src="js/common/factories/productFactory.js"></script>
     <script src="js/common/factories/platformFactory.js"></script>
