--- a/www/js/login/login.html
+++ b/www/js/login/login.html
@@ -2,8 +2,10 @@
   <ion-header-bar>
     <h1 class="title">Sign-In</h1>
   </ion-header-bar>
-  <ion-nav-bar class="bar-positive">
+  <ion-nav-bar class="bar-default">
   </ion-nav-bar>
+     <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Recycle001.svg/2000px-Recycle001.svg.png" alt="FreeSwap">
+
   <ion-content>
     <form>
       <div class="list">
@@ -25,8 +27,10 @@
         </label>
         <button ng-click="loginFacebook()">Facebook Login</button>
       </div>
+
     </form>
 
     <button ng-click="goTo('sign-up')">Sign Up</button>
   </ion-content>
+
 </ion-nav-view>
