--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -33,7 +33,7 @@
         }" >
 
         <img src="{{item.product.photoUrls}}">
-        <h2 style="text-align: left">{{item.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(item)" style="font-size:40px; float: right">  Chat</i>
+        <h2 style="text-align: left">{{item.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(item)" style="font-size:40px; float: right"></i>
 
         <p>{{item.product.location}}</p>
         <p> Liked By {{item.buyer.username}}</p>
