--- a/www/js/settings/settings.html
+++ b/www/js/settings/settings.html
@@ -13,6 +13,10 @@
         Login with Facebook
       </a> -->
 
+      <a class="item item-icon-left" ng-click="getLocation()">
+        <i class="icon ion-pinpoint"></i>
+        Get New Location
+      </a>
       <a class="item item-icon-left" ng-click="logout()">
         <i class="icon ion-close-circled" ng-click="logout()"></i>
         Logout
