--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -48,7 +48,7 @@
 
 
   </div>
-<div id="location"><i class="fa fa-map-marker"></i>Get Location</div>
+    <div id="location" ng-click="getLocation()"><i class="icon ion-pinpoint"></i>Get Location</div>
   </ion-pane>
 
   <!-- <ion-spinner icon="ripple" ng-show="cards.length == 0"></ion-spinner> -->
