--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,8 @@
     <script src="js/common/factories/productFactory.js"></script>
     <script src="js/common/factories/platformFactory.js"></script>
     <script src="js/common/factories/matchFactory.js"></script>
+    <!-- Filters -->
+    <script src="js/common/filters/stringCut.js"></script>
     <!-- Public Libraries -->
     <script src="lib/tdcards/tdcards.js"></script>
     <script src="lib/tdcards/collide.js"></script>
