--- a/www/js/chat/chat.html
+++ b/www/js/chat/chat.html
@@ -8,6 +8,12 @@
     <ion-list>
       <ion-item ng-repeat="message in firebase">{{ message.from }}: {{ message.content }}</ion-item>
     </ion-list>
+    <div ng-repeat="message in firebase">
+    <span>
+      
+    </span>
+    </div>
+
   </ion-scroll>
 
     <div class="bar bar-footer">
