--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -25,24 +25,29 @@
     </div>
     <br>
     <br>
-
     <div class="list">
+      <!-- <div ng-repeat="title in titles"> -->
+      
+      <div ng-repeat="match in matches">
 
-      <ion-item ng-repeat="item in matches" class="item-thumbnail-left" ng-class="{
+        <!-- <h1>{{title}}</h1> -->
+      <ion-item ng-repeat="item in match" class="item-thumbnail-left" ng-class="{
           green: item.product.swappedWith == item.buyer._id
         }" >
-
+        
         <img src="{{item.product.photoUrls}}">
-        <h2 style="text-align: left">{{item.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(item)" style="font-size:40px; float: right">  Chat</i>
+        <h2 style="text-align: left">{{item.buyer.username}}</h2>
+        <i class="icon ion-chatbubbles" ng-click="goToChat(item)" style="font-size:40px; float: right">  Chat</i>
 
         <p>{{item.product.location}}</p>
-        <p> Liked By {{item.buyer.username}}</p>
 
-        <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
-        <button class="delete" ng-model="item.buyer._id" ng-click="delete(item.product._id, item.buyer._id)">Delete</button>
+<!--         <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
+        <button class="delete" ng-model="item.buyer._id" ng-click="delete(item.product._id, item.buyer._id)">Delete</button> -->
 
-        <button class="traded" ng-click="traded(item.product._id, item.buyer._id)">Traded</button>
+        <button ng-click="traded(item.product._id, item.buyer._id)"><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/100715-84.png"></button>
       </ion-item>
+      <!-- </div> -->
+      </div>
 
     </div>
 
