--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -14,7 +14,7 @@
             <img class="url" ng-src="{{card.photoUrls}}" ng-click="openModal()">
           </div>
           <hr style="margin-top: 1px;margin-bottom: 5px">
-          <div class="title" style="font-weight: bolder; font-size: 30px; text-align: center">{{card.title}}
+          <div class="title" style="font-weight: bolder; font-size: 30px; text-align: center">{{card.title | cut:true:40:' ...'}}
             <!-- <div> -->
               <!-- <div class="description">{{card.description}} </div> -->
             <!-- </div> -->
