--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -30,7 +30,7 @@
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.matches">
-          Swappers<i class="fa fa-group" style="float:right;"></i>
+          Matches<i class="fa fa-group" style="float:right;"></i>
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.history">
