--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -27,24 +27,24 @@
     <br>
     <div class="list">
       <!-- <div ng-repeat="title in titles"> -->
-      
+
       <div ng-repeat="match in matches">
 
         <!-- <h1>{{title}}</h1> -->
       <ion-item ng-repeat="item in match" class="item-thumbnail-left" ng-class="{
           green: item.product.swappedWith == item.buyer._id
         }" >
-        
+
         <img src="{{item.product.photoUrls}}">
         <h2 style="text-align: left">{{item.buyer.username}}</h2>
-        <i class="icon ion-chatbubbles" ng-click="goToChat(item)" style="font-size:40px; float: right">  Chat</i>
+        <i class="icon ion-chatbubbles" ng-click="goToChat(item)" style="font-size:40px; float: right"></i>
 
         <p>{{item.product.location}}</p>
 
 <!--         <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
         <button class="delete" ng-model="item.buyer._id" ng-click="delete(item.product._id, item.buyer._id)">Delete</button> -->
 
-        <button ng-click="traded(item.product._id, item.buyer._id)"><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/100715-84.png"></button>
+        <img src="../../img/swapped.png" height="25px" ng-click="traded(item.product._id, item.buyer._id)" style="box-shadow: none;">
       </ion-item>
       <!-- </div> -->
       </div>
