--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,12 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-  <!--   // <script src="cordova.js"></script> -->
+    <script src="cordova.js"></script>
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
 
     <!-- your app's js -->
-
     <script src="js/app.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/signup/signup.js"></script>
     <script src="js/tinderCards/tindercards.js"></script>
     <script src="js/post/post.js"></script>
     <script src="js/matches/matches.js"></script>
@@ -29,7 +27,7 @@
     <script src="js/settings/settings.js"></script>
     <script src="js/chat/chat.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
-    <script src="js/front-page/front-page.js"></script>
+    <script src="js/login/login.js"></script>
     <script src="js/history/history.js"></script>
     <script src="js/view/view.js"></script>
     <!-- Factories -->
