--- a/www/js/login/login.html
+++ b/www/js/login/login.html
@@ -1,36 +1,32 @@
-<ion-nav-view>
+<ion-view view-title="Welcome To">
   <ion-header-bar>
     <h1 class="title">Sign-In</h1>
   </ion-header-bar>
-  <ion-nav-bar class="bar-default">
-  </ion-nav-bar>
-     <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Recycle001.svg/2000px-Recycle001.svg.png" alt="FreeSwap">
-
+  <ion-nav-bar class="bar-dark"></ion-nav-bar>
   <ion-content>
-    <form>
-      <div class="list">
-
+      <img style="box-shadow: none; max-height: 300px; margin-left: auto; margin-right: auto; display: block;" src="../../img/freeswaplogo.png">
+      <div id="login" class="list list-inset">
         <label class="item item-input">
-          <span class="input-label">Username</span>
+          <span class="input-label">Username:</span>
           <input type="text" ng-model="user.username">
         </label>
-
-
         <label class="item item-input">
-          <span class="input-label">Password</span>
+          <span class="input-label">Password:</span>
           <input type="password" ng-model="user.password">
         </label>
-
-
-        <label class="item">
-          <button class="button button-block button-positive" ng-click="login(user)">Log in</button>
-        </label>
-        <button ng-click="loginFacebook()">Facebook Login</button>
+        <div class="row">
+          <div class="col col-50">
+           <button class="button button-block button-calm" ng-click="login(user)">Log in</button>
+          </div>
+          <div class="col col-50">
+           <button class="button button-block button-calm" ng-click="loginPlatform('facebook')" style="background-color: #3b5998"><i class="fa fa-facebook"></i>Facebook</button>
+          </div>
+        </div>
       </div>
-
-    </form>
-
-    <button ng-click="goTo('sign-up')">Sign Up</button>
+      
+      <div class="register">
+        <button class="button button-energized" ng-click="goTo('sign-up')">Not registered? Click here to sign up <i class="fa fa-arrow-right"></i></button>
+      </div>
   </ion-content>
+</ion-view>
 
-</ion-nav-view>
