--- a/www/js/login/sign-up.html
+++ b/www/js/login/sign-up.html
@@ -1,34 +1,32 @@
-<ion-nav-view>
+<ion-view view-title="Free Swap">
   <ion-header-bar>
     <h1 class="title">Sign-Up</h1>
   </ion-header-bar>
-  <ion-nav-bar class="bar-positive">
-    <ion-nav-back-button class="button-clear">
-        <i class="ion-arrow-left-c"></i> Back
-      </ion-nav-back-button>
+  <ion-nav-bar class="bar-dark">
+
   </ion-nav-bar>
   <ion-content>
 
     <h1>Sign Up</h1>
 
-    <form show-validation novalidate>
+    <div id="sign-up" class="list list-inset">
       <label class="item item-input">
-        <span class="input-label">Username<span>
+        <span class="input-label">Username:</span>
         <input type="text" ng-model="newUser.username" required>
       </label>
       <label class="item item-input">
-        <span class="input-label">Email<span>
-        <input type="text" ng-model="newUser.email" required>
+        <span class="input-label">Email:</span>
+        <input type="email" ng-model="newUser.email" required>
       </label>
       <label class="item item-input">
-        <span class="input-label">Password<span>
-        <input type="text" ng-model="newUser.password" required>
+        <span class="input-label">Password:</span>
+        <input type="password" ng-model="newUser.password" required>
       </label>
       <label class="item">
-        <button class="button button-block button-positive" ng-click="signUp(newUser)">Sign Up</button>
+        <button class="button button-block button-calm" ng-click="signUp(newUser)">Sign Up</button>
       </label>
-    </form>
-    <button ng-click="goTo('front-page')">Login</button>
+    </div>
+    <button class="button button-energized" ng-click="goTo('login')"><i class="fa fa-arrow-left"></i> Return To Login</button>
 
   </ion-content>
-</ion-nav-view>
+</ion-view>
