removed matches for seller

--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -25,6 +25,10 @@
           Swap<i class="fa fa-gift" style="float:right;"></i>
         </ion-item>
 
+        <ion-item nav-clear menu-close ui-sref="app.craigslist">
+          Craigslist<i class="fa fa-gift" style="float:right;"></i>
+        </ion-item>
+
         <ion-item nav-clear menu-close ui-sref="app.post">
           Post<i class="fa fa-camera" style="float:right;"></i>
         </ion-item>
