--- a/www/js/matches/matches.html
+++ b/www/js/matches/matches.html
@@ -16,51 +16,44 @@
   <ion-content>
     <div class="list">
       <div class="tabs bar bar-header">
-        <a class="tab-item" ui-sref="app.matches">
+        <a class="tab-item" ng-click="show=true">
           As a buyer
         </a>
-        <a class="tab-item" ui-sref="app.matchforseller">
+        <a class="tab-item" ng-click="show=false">
           As a seller
         </a>
       </div>
       <br>
       <br>
-      <div ng-hide="showswap">
+      <div ng-show="show">
         <!-- <h2>Free Swap</h2> -->
         <ion-item ng-repeat="appItem in appMatches" class="item-thumbnail-left" ng-class="{
             white: !appItem.product.swappedWith
           , red: appItem.product.swappedWith && appItem.product.swappedWith !== userInfo._id, green: appItem.product.swappedWith === userInfo._id
           }">
-
           <img src="{{appItem.product.photoUrls}}">
           <h2 style="text-align: left">{{appItem.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(appItem)" style="font-size:40px; float: right"></i>
           <!-- <p>{{appItem.product.location}}</p> -->
           <p> From: {{appItem.seller.username}}</p>
           <!-- <button class="More" ng-model="appItem.product._id" ng-click="detail(appItem.product._id)">More Info</button> -->
-
         </ion-item>
       </div>
-
-
-      <div ng-show="showswap">
-        <!-- <h2>Craigslist</h2> -->
-        <ion-list>
-          <ion-item ng-repeat="cgItem in craigsListMatches" class="item-thumbnail-left" ng-class="{
-            red: cgItem.product.swappedWith !== 'null', green: cgItem.product.swappedWith === userInfo._id
-          }">
-            <img src="{{cgItem.product.photoUrls}}">
-            <h2>{{cgItem.product.title}}</h2>
-            <!-- <p>{{cgItem.product.location}}</p> -->
-            <p style="cursor: pointer" ng-click="goToUrl(cgItem.productUrl)">Ext. Link: {{cgItem.productUrl}}</p>
-            <!-- <button class="More" ng-model="cgItem.product._id" ng-click="detail(cgItem.product._id)">More Info</button> -->
-            <ion-reorder-button class="ion-navicon"></ion-reorder-button>
+      <div ng-show="!show">
+        <!-- <div ng-repeat="title in titles"> -->
+        <div ng-repeat="match in matches">
+            <!-- <h1>{{title}}</h1> -->
+          <ion-item ng-repeat="item in match" class="item-thumbnail-left" ng-class="{
+              green: item.product.swappedWith == item.buyer._id
+            }" >
+            <img src="{{item.product.photoUrls}}">
+            <h2 style="text-align: left">Give {{item.product.title}} to {{item.buyer.username}}</h2>
+            <i class="icon ion-chatbubbles" ng-click="goToChat(item)" style="font-size:40px; float: right"></i>
+            <p>{{item.product.location}}</p>
+            <img src="../../img/swapped.png" height="25px" ng-click="traded(item.product._id, item.buyer._id)" style="box-shadow: none;">
           </ion-item>
-        </ion-list>
+        <!-- </div> -->
+        </div>
       </div>
     </div>
   </ion-content>
-    <div class="bar bar-footer bar-dark">
-      <button class="button button-clear" ng-click="showswap=false">FreeSwap Items</button>
-      <button class="button button-clear" ng-click="showswap=true">Craigslist Items</button>
-    </div>
 </ion-view>
