--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -7,14 +7,9 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    <!-- Tinder Cards -->
-    <!-- <link rel="stylesheet" href="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.css">
-    <link href="//code.ionicframework.com/1.0.0-beta.14/css/ionic.css" rel="stylesheet">
-    <script src="http://code.ionicframework.com/collide/0.0.4/collide.js"></script>
-    <script src="//code.ionicframework.com/1.0.0-beta.14/js/ionic.bundle.js"></script>
-    <script src="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script> -->
-
+    <link href='https://fonts.googleapis.com/css?family=Rancho' rel='stylesheet' type='text/css'>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -23,23 +18,29 @@
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
 
     <!-- your app's js -->
-
     <script src="js/app.js"></script>
-    <!-- <script src="js/fsa-pre-built.js"></script> -->
     <script src="js/main.js"></script>
-    <script src="js/signup/signup.js"></script>
     <script src="js/tinderCards/tindercards.js"></script>
     <script src="js/post/post.js"></script>
+    <script src="js/craigslist/craigslist.js"></script>
     <script src="js/matches/matches.js"></script>
     <script src="js/settings/settings.js"></script>
     <script src="js/chat/chat.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
-    <script src="js/front-page/front-page.js"></script>
+    <script src="js/login/login.js"></script>
+    <script src="js/history/history.js"></script>
+    <script src="js/view/view.js"></script>
+    <!-- Factories -->
     <script src="js/common/factories/chatFactory.js"></script>
     <script src="js/common/factories/swipeFactory.js"></script>
+    <script src="js/common/factories/locationFactory.js"></script>
     <script src="js/common/factories/userFactory.js"></script>
     <script src="js/common/factories/productFactory.js"></script>
     <script src="js/common/factories/platformFactory.js"></script>
+    <script src="js/common/factories/matchFactory.js"></script>
+    <!-- Filters -->
+    <script src="js/common/filters/stringCut.js"></script>
+    <!-- Public Libraries -->
     <script src="lib/tdcards/tdcards.js"></script>
     <script src="lib/tdcards/collide.js"></script>
     <!-- firebase & angularfire libraries -->
@@ -50,6 +51,10 @@
 
   <body ng-app="myApp" ng-controller="MainCtrl" no-scroll class="platform-android platform-cordova platform-webview">
     <ion-nav-view></ion-nav-view>
+    <script type="text/javascript">
+        (function(a){if(window.filepicker){return}var b=a.createElement("script");b.type="text/javascript";b.async=!0;b.src=("https:"===a.location.protocol?"https:":"http:")+"//api.filepicker.io/v1/filepicker.js";var c=a.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c);var d={};d._queue=[];var e="pick,pickMultiple,pickAndStore,read,write,writeUrl,export,convert,store,storeUrl,remove,stat,setKey,constructWidget,makeDropPane".split(",");var f=function(a,b){return function(){b.push([a,arguments])}};for(var g=0;g<e.length;g++){d[e[g]]=f(e[g],d._queue)}window.filepicker=d})(document);
+    </script>
+    <!-- <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script> -->
   </body>
 
 </html>
