--- a/platforms/android/assets/www/js/matches/matches.html
+++ b/platforms/android/assets/www/js/matches/matches.html
@@ -1,29 +1,59 @@
 <ion-view view-title="Matches" >
-
       <ion-header-bar class="bar-default">
-        <h1 class="title">Matches</h1>
-
+        <h1 class="title">Matches as a buyer</h1>
+        <style>
+          .white{
+            background-color: white;
+          }
+          .red {
+            background-color: #ff7f7f;
+          }
+          .green {
+            background-color: #76e176;
+          }
+        </style>
       </ion-header-bar>
-<br>
-<br>
-      <div class="list">
-
-          <a class="item item-thumbnail-left" ui-sref="app.chat">
-            <img src="">
-            <h2>Pretty Hate Machine</h2>
-            <p>Nine Inch Nails</p>
-          </a>
-          <a class="item item-thumbnail-left" ui-sref="app.chat">
-            <img src="">
-            <h2>Pretty Hate Machine</h2>
-            <p>Nine Inch Nails</p>
-          </a>
-          <a class="item item-thumbnail-left" ui-sref="app.chat">
-            <img src="">
-            <h2>Pretty Hate Machine</h2>
-            <p>Nine Inch Nails</p>
-          </a>
-
+  <ion-content>
+    <div class="list">
+      <div class="tabs bar bar-header">
+        <a class="tab-item" ng-click="show=true">
+          As a buyer
+        </a>
+        <a class="tab-item" ng-click="show=false">
+          As a seller
+        </a>
       </div>
-
+      <br>
+      <br>
+      <div ng-show="show">
+        <!-- <h2>Free Swap</h2> -->
+        <ion-item ng-repeat="appItem in appMatches" class="item-thumbnail-left" ng-class="{
+            white: !appItem.product.swappedWith
+          , red: appItem.product.swappedWith && appItem.product.swappedWith !== userInfo._id, green: appItem.product.swappedWith === userInfo._id
+          }">
+          <img src="{{appItem.product.photoUrls}}">
+          <h2 style="text-align: left">{{appItem.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(appItem)" style="font-size:40px; float: right"></i>
+          <!-- <p>{{appItem.product.location}}</p> -->
+          <p> From: {{appItem.seller.username}}</p>
+          <!-- <button class="More" ng-model="appItem.product._id" ng-click="detail(appItem.product._id)">More Info</button> -->
+        </ion-item>
+      </div>
+      <div ng-show="!show">
+        <!-- <div ng-repeat="title in titles"> -->
+        <div ng-repeat="match in matches">
+            <!-- <h1>{{title}}</h1> -->
+          <ion-item ng-repeat="item in match" class="item-thumbnail-left" ng-class="{
+              green: item.product.swappedWith == item.buyer._id
+            }" >
+            <img src="{{item.product.photoUrls}}">
+            <h2 style="text-align: left">Give {{item.product.title}} to {{item.buyer.username}}</h2>
+            <i class="icon ion-chatbubbles" ng-click="goToChat(item)" style="font-size:40px; float: right"></i>
+            <p>{{item.product.location}}</p>
+            <img src="../../img/swapped.png" height="25px" ng-click="traded(item.product._id, item.buyer._id)" style="box-shadow: none;">
+          </ion-item>
+        <!-- </div> -->
+        </div>
+      </div>
+    </div>
+  </ion-content>
 </ion-view>
