removed post date

--- a/www/js/history/history.html
+++ b/www/js/history/history.html
@@ -6,26 +6,37 @@
   <br>
   <br>
   <ion-content>
-  <div ng-show="!show">
-    <!-- <h2 style="color: #E38C00">Stuff You're Giving Away</h2> -->
-    <ion-item ng-repeat="item in sellerHistory" class="item-thumbnail-left">
-      <img ng-src="{{item.photoUrls}}">
-      <h2>{{item.title}}</h2>
-      <p>{{item.description}}</p>
-    </ion-item>
+  <div class="list">
+    <div class="tabs bar bar-header">
+      <a class="tab-item" ng-click="show=true">
+        As a buyer
+      </a>
+      <a class="tab-item" ng-click="show=false">
+        As a seller
+      </a>
+    </div>
+    <br>
+    <br>
+    <div ng-show="!show">
+      <!-- <h2 style="color: #E38C00">Stuff You're Giving Away</h2> -->
+      <ion-item ng-repeat="item in sellerHistory" class="item-thumbnail-left">
+        <img ng-src="{{item.photoUrls}}">
+        <h2>{{item.title}}</h2>
+        <p>{{item.description}}</p>
+      </ion-item>
+    </div>
+    <div ng-show="show">
+      <!-- <h2 style="color: #E38C00">Stuff You Liked</h2> -->
+      <ion-item ng-repeat="item in buyerHistory" class="item-thumbnail-left">
+        <img ng-src="{{item.photoUrls}}">
+        <h2>{{item.title}}</h2>
+        <p>{{item.description}}</p>
+      </ion-item>
+    </div>
   </div>
-  <div ng-show="show">
-    <!-- <h2 style="color: #E38C00">Stuff You Liked</h2> -->
-    <ion-item ng-repeat="item in buyerHistory" class="item-thumbnail-left">
-      <img ng-src="{{item.photoUrls}}">
-      <h2>{{item.title}}</h2>
-      <p>{{item.description}}</p>
-    </ion-item>
-  </div>
-
   </ion-content>
-    <div class="bar bar-footer bar-dark">
+<!--     <div class="bar bar-footer bar-dark">
       <button class="button button-clear" ng-click="show=false">Giving Away</button>
       <button class="button button-clear" ng-click="show=true">Liked</button>
-    </div>
+    </div> -->
 </ion-view>
