--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -14,8 +14,8 @@
           </div>
           <div class="title" style="font-weight: bolder; font-size: 20px; text-align: center">{{card.title | cut:true:40:' ...'}}
           </div>
-            <div style="text-align: center; font-size:12px;">Posted on {{postDate}}
-          </div>
+<!--             <div style="text-align: center; font-size:12px;">Posted on {{postDate}}
+          </div> -->
         </div>
       </div>
     </td-card>
